replacing getFirst() by get(0) to support older version of compilers